--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
+    "semantic-release": "^22.0.7",
+    "semantic-release-npm-github-publish": "^1.5.4",
     "styled-components": "^5.3.6",
     "typescript": "5.0.4"
   },
