--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4.1.1
+        with:
+          persist-credentials: false
+
       - uses: actions/setup-node@v4.0.0
         with:
           cache: npm
