--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,6 @@
 {
-  "extends": "@strapi/typescript-utils/tsconfigs/admin",
-
-  "compilerOptions": {
-    "target": "ESNext",
-    "strict": true
-  },
-
-  "include": ["admin", "custom.d.ts"],
-
+  "include": ["client", "server", "custom.d"],
   "exclude": [
-    "node_modules/",
-    "dist/",
-
-    // Do not include server files in the server compilation
-    "server/",
-    // Do not include test files
-    "**/*.test.ts"
+    "node_modules/"
   ]
 }
