--- a/package.json
+++ b/package.json
@@ -59,8 +59,9 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
-    "dev": "tsc -p tsconfig.server.json -w",
-    "build": "tsc -p tsconfig.server.json"
+    "build:client": "tsc -p tsconfig.client.json",
+    "build:server": "tsc -p tsconfig.server.json",
+    "build": "npm run build:client && build:server"
   },
   "license": "MIT",
   "publishConfig": {
