--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@strapi/typescript-utils/tsconfigs/admin",
   "include": ["client", "server", "custom.d"],
   "exclude": [
     "node_modules/"
